k8s/open-flights-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: open-flights
spec:
  replicas: 1
  selector:
    matchLabels:
      app: open-flights
  template:
    metadata:
      labels:
        app: open-flights
    spec:
      containers:
        - name: open-flights
          image: ajinkya0771/open-flights-web:latest
          imagePullPolicy: Always
          command: ["/bin/bash", "start.sh"]
          ports:
            - containerPort: 3000
