k8s/rails-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: open-flights
spec:
  replicas: 1
  selector:
    matchLabels:
      app: open-flights
  template:
    metadata:
      labels:
        app: open-flights
    spec:
      containers:
      - name: web
        image: open-flights-web:latest
        ports:
        - containerPort: 3000
