k8s/rails-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: open-flights
spec:
  selector:
    app: open-flights
  ports:
  - port: 3000
    targetPort: 3000
