k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: open-flights-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: open-flights.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: open-flights
                port:
                  number: 3000
